# openwebrtc

./: CMakeLists.txt  configure.ac
gst/: Makefile.am  owr_gst_local_media_source.c  owr_gst_local_media_source.h  owr_gst_media_source.c
local/: owr_gst_local_media_source.c  owr_local_media_source.c  owr_media_renderer.c
owr/: Makefile.am  owr_media_source.c  owr_utils.c  owr_utils.h
tests/: Makefile.am  test_gst_io.c  test_send_receive.c
transport/: owr_payload.c  owr_payload_private.h  owr_transport_agent.c  owr_video_payload.c
